src/test/ui/lifetimes/lifetime-errors/ex2a-push-one-existing-name-early-bound.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/ex2a-push-one-existing-name-early-bound.rs:1:11
   |
LL | trait Foo<'a> {}
   |          -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error[E0621]: explicit lifetime required in the type of `y`
  --> $DIR/ex2a-push-one-existing-name-early-bound.rs:8:12
   |
LL | fn baz<'a, 'b, T>(x: &mut Vec<&'a T>, y: &T)
   |                                          -- help: add explicit lifetime `'a` to the type of `y`: `&'a T`
...
LL |     x.push(y);
   |            ^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
